--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": "^16.4.0",
     "npm": "^7.19.0",
     "react": "^17.0.2",
+    "react-background-video-player": "^1.1.7",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
