--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "json-server": "^0.16.3",
     "mobx": "^6.3.2",
     "node": "^16.4.0",
     "npm": "^7.19.0",
