--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.2",
-    "firebase": "^7.20.0",
-    "react": "^16.13.1",
+    "firebase": "^7.24.0",
+    "firebase-admin": "^9.10.0",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-multi-carousel": "^2.6.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
