--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "npm": "^7.19.0",
     "react": "^17.0.2",
     "react-background-video-player": "^1.1.7",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
