--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
+    "html2canvas": "^1.0.0",
     "mobx": "^6.3.2",
     "node": "^16.4.0",
     "npm": "^7.19.0",
@@ -16,6 +18,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
+    "tailwindcss": "^2.2.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
